# EI_drone

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
ros_packages/: basic
ros_packages/behavior/: basic_behavior  package.xml  setup.py
ros_packages/behavior/behavior/: AlignCorridor.py  Command_float_setter.py  Hover.py  Land.py  MoveBackward.py  MoveDown.py  MoveForward.py  MoveForwardVp.py  MoveLeft.py  MoveRight.py  MoveUp.py  Semi_aut.py  TakeOff.py  TurnLeft.py  TurnRight.py  __init__.py  auto_off.py  basic_behavior  basic_behavior.py  command.py  fake_forward.py  float_setter.py  forward_behavior.py  hover.py  hover_behavior.py  joy_teleop.py  land.py  move_forward.py  move_left.py  status_viewer.py
ros_packages/behavior/launch/: behavior_launch.xml
ros_packages/behavior_interface/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_packages/low_level_control/: setup.py
ros_packages/low_level_control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_packages/low_level_control/launch/: launch.xml  launch1.xml
ros_packages/low_level_control/log/: latest_build
ros_packages/low_level_control/low_level_control/: PID.py  joy_teleop.py  speed_controller.py  (+1 more)
ros_packages/visual_processing/: package.xml  setup.cfg  setup.py
ros_packages/visual_processing/launch/: door.xml  webcam.xml
ros_packages/visual_processing/visual_processing/: README.md  door.py  my_line_library.py  optical.py  test.py  vp_node.py
ros_packages/visual_processing/visual_processing/door/: metadata.yaml
(+75 files in other folders)
