<package format="3">
  <name>visual_processing</name>
  <version>0.0.0</version>
  <description>Package for visual processing</description>
  <maintainer email="st5dronelab@todo.todo">st5dronelab</maintainer>
  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies for runtime -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>cv_bridge</exec_depend> <!-- If you are using OpenCV -->
  <exec_depend>image_transport</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>




